--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -14,5 +14,7 @@
         <!-- Customize your theme here. -->
 
         <item name="android:windowBackground">@color/back_ground</item>
+        <item name="android:itemTextAppearance">@style/itemTextStyle.AppTheme</item>
+        <item name="android:popupMenuStyle">@style/PopupMenu</item>
     </style>
 </resources>
