--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -24,4 +24,5 @@
     <color name="normal_selected_color">#63666E</color>
     <color name="hEEEEEE">#EEEEEE</color>
     <color name="hC1C0C0">#C1C0C0</color>
+    <color name="h383B49">#383B49</color>
 </resources>
