--- a/app/src/main/res/values/style.xml
+++ b/app/src/main/res/values/style.xml
@@ -21,7 +21,7 @@
     </style>
 
     <style name="TextNormal" parent="TextTitle">
-        <item name="android:textSize">@dimen/_13ssp</item>
+        <item name="android:textSize">@dimen/_12ssp</item>
         <item name="android:textColor">@color/white</item>
     </style>
 
@@ -35,5 +35,15 @@
         <item name="android:layout_height">0.5dp</item>
         <item name="android:background">@color/white</item>
         <item name="android:alpha">0.2</item>
+    </style>
+
+    <style name="PopupMenu" parent="@android:style/Widget.PopupMenu">
+        <item name="android:popupBackground">@color/h383B49</item>
+        <item name="android:itemTextAppearance">@color/white</item>
+    </style>
+
+    <style name="itemTextStyle.AppTheme" parent="@android:style/TextAppearance.Widget.IconMenu.Item">
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textSize">@dimen/_11ssp</item>
     </style>
 </resources>
