--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -12,8 +12,10 @@
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">@color/back_ground</item>
         <!-- Customize your theme here. -->
-
+        <item name="android:popupMenuStyle">@style/PopupMenu</item>
         <item name="android:windowBackground">@color/back_ground</item>
+        <item name="android:itemTextAppearance">@style/itemTextStyle.AppTheme</item>
+
     </style>
 
 </resources>
